--- a/Assignments/Assignment 2/Assignment 2 - Mongo.ipynb
+++ b/Assignments/Assignment 2/Assignment 2 - Mongo.ipynb
@@ -40,7 +40,7 @@
    "outputs": [],
    "source": [
     "# connecting to MongoDB\n",
-    "cluster = MongoClient(\"mongodb+srv://admin0:Jj123123@cluster0.wb68g.mongodb.net/?retryWrites=true&w=majority\")\n",
+    "cluster = MongoClient(\"mongodb+srv://admin:<password>@cluster0.wb68g.mongodb.net/?retryWrites=true&w=majority\")\n",
     "# connecting to the DB\n",
     "db = cluster[\"Assignemnt_2\"]\n",
     "# connecting to the cluster\n",
