--- a/Excercises/Excercise 1 - Data Engineering & Visualization.ipynb
+++ b/Excercises/Excercise 1 - Data Engineering & Visualization.ipynb
@@ -104,6 +104,7 @@
       ],
       "source": [
         "book_title = book.find('h6').a.text\n",
+        "\n",
         "book_title "
       ]
     },
@@ -128,7 +129,8 @@
       ],
       "source": [
         "author = book.find('div' , {'class':'author'}).a.text\n",
-        "print(author)"
+        "\n",
+        "author"
       ]
     },
     {
@@ -153,7 +155,8 @@
       "source": [
         "price_details = book.find('div' , {'class':'price-box'})\n",
         "price = price_details.find('span', {'class':'price'}).text\n",
-        "print(price)"
+        "\n",
+        "price"
       ]
     },
     {
@@ -177,7 +180,8 @@
       ],
       "source": [
         "description = book.find('div' , {'class':'item-description'}).p.text\n",
-        "print(description)"
+        "\n",
+        "description"
       ]
     },
     {
@@ -674,6 +678,7 @@
         "\n",
         "# Number of missing values in each column of training data\n",
         "missing_val_count_by_column = (X_train.isnull().sum())\n",
+        "\n",
         "print(missing_val_count_by_column[missing_val_count_by_column > 0])"
       ]
     },
@@ -1619,6 +1624,7 @@
         "\n",
         "p = figure(title = \"Ledger: ID x Salary\")\n",
         "p.circle('id','salary',source=ledger,fill_alpha=0.2, size=10)\n",
+        "\n",
         "show(p)"
       ]
     },
